# Portfolio-Risk-PnL-Analytics-Engine

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260630_0001_initial_schema.py  20260630_0002_fx_benchmarks_snapshots.py
app/analytics/: benchmark.py  exposures.py  fx.py  pnl.py  positions.py  returns.py  risk.py  tax_lots.py
app/api/: dependencies.py  main.py
app/api/routes/: benchmark.py  dashboard.py  exposures.py  health.py  ingestion.py  pnl.py  positions.py  returns.py  risk.py  snapshots.py  validation.py
app/core/: config.py  exceptions.py
app/db/: init_db.py  models.py  repositories.py  session.py
app/schemas/: benchmark.py  common.py  exposures.py  ingestion.py  pnl.py  positions.py  returns.py  risk.py  snapshots.py  validation.py
app/services/: ingestion_service.py  reporting_service.py  snapshot_service.py  validation_service.py
app/utils/: dates.py  hashing.py  money.py
data/bad_samples/: inconsistent_positions.csv  invalid_trades.csv  missing_prices.csv
data/sample/: benchmarks.csv  fx_rates.csv  instruments.csv  portfolios.csv  prices.csv  trades.csv
docs/: API_EXAMPLES.md  ARCHITECTURE.md  CALCULATION_METHODS.md  PRD.md  SAMPLE_OUTPUTS.md
scripts/: generate_report.py  run_validation.py  seed_db.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_analytics.py  test_validation_service.py
